--- a/doc/comhpc16/paper.tex
+++ b/doc/comhpc16/paper.tex
@@ -19,8 +19,9 @@
   pdfborder={0 0 0},
   colorlinks=false,
   pdfpagelabels=false,
-  pdftitle={},
-  pdfauthor={},
+  pdftitle={Extending a Message Passing Runtime to Support
+    Partitioned, Global Logical Address Spaces},
+  pdfauthor={D. Brian Larkins and James Dinan},
   pdfsubject={},
   pdfkeywords={},
   bookmarks=false,
