--- a/doc/comhpc16/background.tex
+++ b/doc/comhpc16/background.tex
@@ -1,20 +1,21 @@
 \section{Background}
 
-In this work, we explore efficient runtime support for partitioned, global
-logical address spaces (PGLAS).  We define the PGLAS data model to be similar
-to PGAS data models, which have been in use for over two decades, with the
-distinction that data elements are logically addressed using an
-application-meaningful {\em key}.  Each key is mapped to a partition of the
-global address space and an application can query locality information for a
-given key or iterate over local keys, e.g., to support owner-computes models of
-work distribution.  In contrast, PGAS models traditionally use a direct
-addressing model, such as a remote address (OpenSHMEM and UPC), an offset into
-a remote buffer (MPI), or an index into a regular array (Fortran Coarrays).
-While there are differences in memory addressing and layout, PGLAS utilizes the
-same one-sided, asynchronous data access model as existing PGAS approaches and
-data in global space is accessed using one-sided get (read), put
-(write), and atomic access functions.  Thus, PGLAS is a member of the broader
-family of distributed key/value stores where data organization and access are
+In this work, we explore efficient runtime support for partitioned,
+global logical address spaces (PGLAS).  We define the PGLAS data model
+to be similar to PGAS data models, with the distinction that data
+elements are logically addressed using an application-meaningful {\em
+  key}.  Each key is mapped to a partition of the global address space
+and an application can query locality information for a given key or
+iterate over local keys, e.g., to support owner-computes models of
+work distribution.  In contrast, PGAS models traditionally use a
+direct addressing model, such as a remote address (OpenSHMEM and UPC),
+an offset into a remote buffer (MPI), or an index into a regular array
+(Fortran Coarrays).  While there are differences in memory addressing
+and layout, PGLAS utilizes the same one-sided, asynchronous data
+access model as existing PGAS approaches and data in global space is
+accessed using one-sided get (read), put (write), and atomic access
+functions.  Thus, PGLAS is a member of the broader family of
+distributed key/value stores where data organization and access are
 similar to PGAS models.
 
 Most PGAS models require global knowledge of data layout in order to
@@ -77,10 +78,10 @@ sparse row (CSR) and variants. Other problems, such as N-body
 simulation, grid and mesh solvers, are naturally expressed using
 spatial decomposition trees such as quadtrees and octrees. 
 
-In these cases, there is a natural mapping between an index or
-coordinate system and the corresponding data. A global distributed
-key/value store could replace a complicated and difficult to parallelize
-sparse data structure given the right application.
+In these cases, there is a natural mapping between an indexing system
+and the corresponding data. A global distributed key/value store could
+replace a complicated and difficult to parallelize sparse data
+structure given the right application.
 
 \subsection{Related Work}
 
@@ -196,33 +197,32 @@ to track asynchronous notifications for ongoing communication.
 A PTE using the matching interface maintains a list of match-list
 entries (ME). Each ME specifies a set of matching criteria and a
 memory region associated with the entry. If all of the match criteria
-are satisfied, the communication operation commences working on
-the corresponding memory region. In particular, each ME contains a 64-bit
+are satisfied, the communication operation commences working on the
+corresponding memory region. In particular, each ME contains a 64-bit
 {\em match bits} field that must correspond to the match bits
 specified on an incoming communication request. For example, a process
-would post an {\tt MPI\_Recv()} with a specific match bits
-field. Later, Portals would receive a communication request for an
-{\tt MPI\_Send()} with the same match bits, which would be correspond
-to the posted receive.
+would post an {\tt MPI\_Recv()} with a specific tag that maps to a
+specific match bits field. Later, Portals would receive a
+communication request for an {\tt MPI\_Send()} with the same match
+bits, which would correspond to the posted receive.
 
-Portals provides {\em event queues} and {\em event counters} to track events
-relating to initiator- and target-side Portals operations.  Full events contain
-detailed information about the event and communication operation involved,
-whereas counting events are lighter weight and capture only the success or
-failure of a given operation.
+Portals provides {\em event queues} and {\em event counters} to track
+events relating to initiator- and target-side Portals operations.
+Full events contain detailed information about the event and
+communication operation involved, whereas counting events are lighter
+weight and capture only the success or failure of a given operation.
 Counters are useful for lightweight event counting, where copying a
 large amount of data from the Portals implementation to the
 application is unnecessary.
 
-On the initiator, an event queue may be associated with an MD, whereas on the
-target, a queue may be associated with each PTE.  Counters can also be used to
-track both initiator and target events.
-Unlike target-side event queues, a counter may be
-associated with each ME in the match-list. Multiple MEs may share a
-single counter, if desired. \pdht typically uses counters to watch for
-successful completion, and full events to track specific failures. More
-detailed descriptions of event and counter use within \pdht is
-discussed below.
+On the initiator, an event queue may be associated with an MD, while 
+a queue may be associated with each PTE on the target. Counters can
+also be used to track both initiator and target events. Unlike
+target-side event queues, a counter may be associated with each ME in
+the match-list. Multiple MEs may share a single counter, if
+desired. \pdht typically uses counters to watch for successful
+completion, and full events to track specific failures. More detailed
+descriptions of event and counter use within \pdht is discussed below.
 
 To put everything together, Figure \ref{fig:portals_put} shows the
 relationships between the target-side data structures and a sample
@@ -231,10 +231,10 @@ initiator process has called {\tt PtlPut} with some data on a matching
 interface, with the expected match bits set to 74. When the target
 process receives the request, it is dispatched through the
 initiator-specified PT index. Next, the match list is searched, until
-a 74 is found, or the end of the list is reached. Once the ME has been
+a 74 is found or the end of the list is reached. Once the ME has been
 located, the {\tt PtlPut} data is copied into the corresponding memory
 region. The operation may cause a {\tt PUT} event to be appended to
-the event queue or ME success counter to be incremented. An
+the event queue or the ME success counter to be incremented. An
 acknowledgement is sent back to the initiator, possibly generating
 another full event or counting event according to the MD that the initiator
 supplied to the {\tt PtlPut} operation.
