--- a/doc/comhpc16/conclusion.tex
+++ b/doc/comhpc16/conclusion.tex
@@ -3,11 +3,11 @@
 We have presented \pdht, a partitioned, distributed hash table implementation
 that uses a novel application of Portals networking interface constructs
 initially intended for supporting MPI messaging.  By building \pdht on top of
-Portals, we will be able to take advantage of offload NICs that support the
-Portals layer with a hardware processing engine.  \pdht is an example of the
-broader family of partitioned, global logical address space (PGLAS) parallel
+Portals, we are able to take advantage of offload NICs that support the
+Portals layer with a hardware processing engine.  \pdht is an example of a
+family of partitioned, global logical address space (PGLAS) parallel
 programming models and we anticipate that efficient implementations of such
-models will be a key enabling technology for sparse methods, which are of
+models will be an enabling technology for sparse methods, which are of
 increased interest within the scientific and data analytics communities.
 
 In this initial design study, we have identified a first mapping of the \pdht
