--- a/doc/comhpc16/conclusion.tex
+++ b/doc/comhpc16/conclusion.tex
@@ -1,4 +1,8 @@
+\vspace{-1mm}
+
 \section{Conclusion}
+
+%\vspace{-1.0mm}
 
 We have presented \pdht, a partitioned, distributed hash table implementation
 that uses a novel application of Portals networking interface constructs
