--- a/doc/comhpc16/introduction.tex
+++ b/doc/comhpc16/introduction.tex
@@ -40,7 +40,7 @@ overheads to maintain cache coherence.
 
 The message matching model used by the Message Passing Interface
 (MPI)~\cite{mpi-forum:15} establishes a layer of separation between a
-sender and the location where data is be written at the receiver.
+sender and the location where data is written at the receiver.
 Instead of specifying a direct memory location where data will be
 stored, the sender specifies an application-meaningful {\em tag} that
 the receiver uses to associate the transmission with a data buffer.
