--- a/doc/comhpc16/results.tex
+++ b/doc/comhpc16/results.tex
@@ -56,14 +56,16 @@ visited before finding a match.
 \begin{figure}
     \centering
     \includegraphics[width=.9\linewidth]{plots/throughput}
-    \caption{System throughput for a range of local volume (entries per node).}
+    %\caption{System throughput for a range of local volume (entries per node).}
+    \caption{Aggregate system throughput for active list lengths of 10,000 to 50,000 local elements (8 byte elements)}
     \label{fig:throughput}
 \end{figure}
 
 \begin{figure}
     \centering
     \includegraphics[width=.95\linewidth]{plots/mlen}
-    \caption{Read operation latency versus list depth for various size entries.}
+    %\caption{Read operation latency versus list depth for various size entries.}
+    \caption{Latency for various size read operations measured over a range of active list (Portals matchlist) lengths. For this experiment, the expected matching depth of a list of length $L$ is $L/2$.}
     \label{fig:mlen}
 \end{figure}
 
