Formatting fixes from workshop organizers

--- a/doc/comhpc16/paper.tex
+++ b/doc/comhpc16/paper.tex
@@ -47,9 +47,11 @@
 \title{Extending a Message Passing Runtime to Support Partitioned, Global Logical Address Spaces}
 \author{\IEEEauthorblockN{D. Brian Larkins}
 \IEEEauthorblockA{Rhodes College}
+\IEEEauthorblockA{Memphis, TN}
 \and
 \IEEEauthorblockN{James Dinan}
 \IEEEauthorblockA{Intel Corporation}
+\IEEEauthorblockA{Hudson, MA}
 \thanks{\hspace{-1em}COMHPC16; Salt Lake City, Utah; November 2016\newline
    978-1-5090-3829-9/16/\$31.00 \copyright 2016 IEEE}
 }
@@ -89,7 +91,7 @@ PGAS; Parallel Hash Table; Portals; Offload
 \input{conclusion}
 
 % Acknowledgments
-\section*{Acknowledgements}
+\section*{Acknowledgement}
 
 This work used the Extreme Science and Engineering Discovery Environment
 (XSEDE), which is supported by National Science Foundation grant number
