--- a/doc/comhpc16/results.tex
+++ b/doc/comhpc16/results.tex
@@ -57,7 +57,7 @@ visited before finding a match.
     \centering
     \includegraphics[width=.9\linewidth]{plots/throughput}
     %\caption{System throughput for a range of local volume (entries per node).}
-    \caption{Aggregate system throughput for active list lengths of 10,000 to 50,000 local elements (8 byte elements)}
+    \caption{Aggregate system throughput for active list lengths of 10,000 to 50,000 local elements (8 byte elements).}
     \label{fig:throughput}
 \end{figure}
 
