--- a/doc/paper17/results.tex
+++ b/doc/paper17/results.tex
@@ -6,14 +6,14 @@ These are some experimental results.
   \center
   \fbox{\rule{2.5in}{0pt}\rule[-2.5in]{0pt}{4ex}}  
   \caption{Hash-table insertion latency compared to OpenSHMEM ($\mu$ sec)}
-  \label{fig:put-latency}
+  \label{fig:1}
 \end{figure}
 
 \begin{figure}[ht]
   \center
   \fbox{\rule{2.5in}{0pt}\rule[-2.5in]{0pt}{4ex}}  
   \caption{Hash-table retrieval latency compared to OpenSHMEM ($\mu$ sec)}
-  \label{fig:put-latency}
+  \label{fig:2}
 \end{figure}
 
 \begin{figure}[ht]
@@ -21,7 +21,7 @@ These are some experimental results.
   \fbox{\rule{2.5in}{0pt}\rule[-2.5in]{0pt}{4ex}}  
   \caption{Hash-table insertion throughput compared to OpenSHMEM
     (million ops/sec)}
-  \label{fig:put-latency}
+  \label{fig:3}
 \end{figure}
 
 
@@ -30,21 +30,21 @@ These are some experimental results.
   \fbox{\rule{2.5in}{0pt}\rule[-2.5in]{0pt}{4ex}}  
   \caption{Hash-table retrieval throughput compared to OpenSHMEM
     (million ops/sec)}
-  \label{fig:put-latency}
+  \label{fig:4}
 \end{figure}
 
 \begin{figure}[ht]
   \center
   \fbox{\rule{2.5in}{0pt}\rule[-2.5in]{0pt}{4ex}}  
   \caption{Weak-scaling vs. OpenShmem (Speedup vs. \# processors}
-  \label{fig:put-latency}
+  \label{fig:5}
 \end{figure}
 
 \begin{figure}[ht]
   \center
   \fbox{\rule{2.5in}{0pt}\rule[-2.5in]{0pt}{4ex}}  
   \caption{Collisions vs. OpenShmem }
-  \label{fig:put-latency}
+  \label{fig:6}
 \end{figure}
 
 %%% Local Variables:
