--- a/doc/paper17/bibdb.bib
+++ b/doc/paper17/bibdb.bib
@@ -8,11 +8,12 @@
   location={Denver, Colorado, USA},
   publisher={ACM},
   isbn={978-1-4503-2378-9},
+  address={""}
 }
 
 @MISC{cmpi10,
     author = {Justin M. Wozniak and Robert Latham and Sam Lang and Seung Woo Son and Robert Ross},
-    title = {C-MPI: A DHT Implementation for Grid and HPC Environments. (Preprint ANL/MCS-P1746-0410},
+    title = {{C-MPI}: {A} {DHT} Implementation for Grid and {HPC} Environments. {(Preprint ANL/MCS-P1746-0410)}},
     year = {2010}
 }
 
@@ -26,18 +27,22 @@
   booktitle = {{SIGCOMM}},
   pages     = {149--160},
   year      = {2001},
-  url       = {http://doi.acm.org/10.1145/383059.383071},
   doi       = {10.1145/383059.383071},
   timestamp = {Thu, 04 Mar 2004 15:07:41 +0100},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/sigcomm/StoicaMKKB01},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  bibsource = {dblp computer science bibliography, http://dblp.org},
+    address={""},
 }
 
 @INPROCEEDINGS{zht13,
     author = {Tonglin Li and Xiaobing Zhou and Kevin Br and Dongfang Zhao and Ke Wang and Anupam Rajendran and Zhao Zhang and Ioan Raicu},
-    title = {ZHT: A light-weight reliable persistent dynamic scalable zero-hop distributed hash table},
-    booktitle = {In Proceedings of the 27th IEEE International Parallel and Distributed Processing Symposium (IPDPS},
-    year = {2013}
+    title = {{ZHT}: {A} light-weight reliable persistent dynamic scalable zero-hop distributed hash table},
+    booktitle = {In Proceedings of the 27th IEEE International Parallel and Distributed Processing Symposium},
+    series = {IPDPS '13},
+    year = {2013},
+    pages = {},
+    address={""},
+    publisher={""}
 }
 
 @inproceedings{kademlia02,
@@ -49,11 +54,11 @@
   pages     = {53--65},
   year      = {2002},
   crossref  = {DBLP:conf/iptps/2002},
-  url       = {http://dx.doi.org/10.1007/3-540-45748-8_5},
   doi       = {10.1007/3-540-45748-8_5},
   timestamp = {Fri, 01 Jul 2011 13:41:51 +0200},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/iptps/MaymounkovM02},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  bibsource = {dblp computer science bibliography, http://dblp.org},
+  address    = {""}
 }
 
 
@@ -68,11 +73,11 @@
   pages     = {329--350},
   year      = {2001},
   crossref  = {DBLP:conf/middleware/2001},
-  url       = {http://dx.doi.org/10.1007/3-540-45518-3_18},
   doi       = {10.1007/3-540-45518-3_18},
   timestamp = {Tue, 28 Jun 2011 15:13:50 +0200},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/middleware/RowstronD01},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  bibsource = {dblp computer science bibliography, http://dblp.org},
+  address    = {""}
 }
 
 
@@ -80,11 +85,10 @@
   author    = {Lisa Phillips and
                Brad Fitzpatrick},
   title     = {LiveJournal's Backend and memcached: Past, Present, and Future},
-  booktitle = {Proceedings of the 18th Conference on Systems Administration {(LISA}
+  booktitle = {Proceedings of the 18th Conference on Systems Administration {(LISA)}
                2004), Atlanta, USA, November 14-19, 2004},
   year      = {2004},
   crossref  = {DBLP:conf/lisa/2004},
-  url       = {http://www.usenix.org/publications/library/proceedings/lisa04/tech/talks/livejournal.pdf},
   timestamp = {Thu, 15 May 2014 18:36:22 +0200},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/lisa/PhillipsF04},
   bibsource = {dblp computer science bibliography, http://dblp.org}
@@ -95,14 +99,13 @@
   author    = {Patrick Stuedi and
                Animesh Trivedi and
                Bernard Metzler},
-  title     = {Wimpy Nodes with 10GbE: Leveraging One-Sided Operations in Soft-RDMA
+  title     = {Wimpy Nodes with {10GbE}: Leveraging One-Sided Operations in Soft-{RDMA}
                to Boost Memcached},
   booktitle = {2012 {USENIX} Annual Technical Conference, Boston, MA, USA, June 13-15,
                2012},
   pages     = {347--353},
   year      = {2012},
   crossref  = {DBLP:conf/usenix/2012},
-  url       = {https://www.usenix.org/conference/atc12/technical-sessions/presentation/stuedi},
   timestamp = {Mon, 19 May 2014 07:40:42 +0200},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/usenix/StuediTM12},
   bibsource = {dblp computer science bibliography, http://dblp.org}
@@ -120,7 +123,6 @@
   pages     = {368},
   year      = {2004},
   crossref  = {DBLP:conf/podc/2004},
-  url       = {http://doi.acm.org/10.1145/1011767.1011823},
   doi       = {10.1145/1011767.1011823},
   timestamp = {Wed, 23 May 2012 14:26:10 +0200},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/podc/RamabhadranRHS04},
@@ -141,7 +143,6 @@
   pages     = {2901--2903},
   year      = {2015},
   crossref  = {DBLP:conf/bigdataconf/2015},
-  url       = {http://dx.doi.org/10.1109/BigData.2015.7364116},
   doi       = {10.1109/BigData.2015.7364116},
   timestamp = {Fri, 08 Jan 2016 13:52:01 +0100},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/bigdataconf/ZhouLWZSR15},
@@ -157,7 +158,6 @@
                2012},
   publisher = {{USENIX} Association},
   year      = {2012},
-  url       = {https://www.usenix.org/publications/proceedings/?f[0]=im_group_audience%3A280},
   timestamp = {Mon, 19 May 2014 07:40:42 +0200},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/usenix/2012},
   bibsource = {dblp computer science bibliography, http://dblp.org}
@@ -201,11 +201,10 @@
 
 @proceedings{DBLP:conf/lisa/2004,
   editor    = {Lee Damon},
-  title     = {Proceedings of the 18th Conference on Systems Administration {(LISA}
+  title     = {Proceedings of the 18th Conference on Systems Administration {(LISA)}
                2004), Atlanta, USA, November 14-19, 2004},
   publisher = {{USENIX}},
   year      = {2004},
-  url       = {https://www.usenix.org/publications/proceedings/?f[0]=im_group_audience%3A170},
   timestamp = {Thu, 15 May 2014 18:36:22 +0200},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/lisa/2004},
   bibsource = {dblp computer science bibliography, http://dblp.org}
@@ -219,7 +218,6 @@
                July 25-28, 2004},
   publisher = {{ACM}},
   year      = {2004},
-  url       = {http://dl.acm.org/citation.cfm?id=1011767},
   isbn      = {1-58113-802-4},
   timestamp = {Wed, 23 May 2012 14:26:10 +0200},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/podc/2004},
@@ -231,9 +229,281 @@
                Clara, CA, USA, October 29 - November 1, 2015},
   publisher = {{IEEE}},
   year      = {2015},
-  url       = {http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=7347101},
   isbn      = {978-1-4799-9926-2},
   timestamp = {Fri, 08 Jan 2016 11:30:11 +0100},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/bigdataconf/2015},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+@misc{ openshmem-1.3,
+    key={{OpenSHMEM Specification Committee}},
+    title={{OpenSHMEM} Application Programming Interface, Version 1.3},
+    month=feb,
+    year=2016,
+    howpublished={\url{http://www.openshmem.org}}
+}
+
+@techreport{ portals4,
+    author  = { Brian W. Barrett and Ron Brightwell and Scott Hemmert and Kevin
+                Pedretti and Kyle Wheeler and Keith Underwood and Rolf Riesen and
+                Arthur B. Maccabe and Trammell Hudson},
+    title   = {The {Portals} 4.0.2 Network Programming Interface},
+    institution = {Sandia National Laboratories},
+    number  = {SAND2013-3181},
+    month   = {April},
+    year    = 2013
+}
+
+@Misc{portals-code,
+  key = "Portals 4",
+  title         = {Portals 4 Reference Implementation},
+  howpublished  = "Online: \url{https://github.com/Portals4/portals4}",
+  month = sep,
+  year = 2016,
+}
+
+@INPROCEEDINGS{ bxi, 
+    author={S. Derradji and T. Palfer-Sollier and J. P. Panziera and A. Poudes and F. W. Atos}, 
+    booktitle={Proc. IEEE 23rd Annual Symposium on High-Performance Interconnects}, 
+    title={The {BXI} Interconnect Architecture}, 
+    year={2015}, 
+    pages={18-25}, 
+    doi={10.1109/HOTI.2015.15}, 
+    ISSN={1550-4794}, 
+    month={Aug}
+}
+
+@TechReport{ mpi-forum:15,
+  author    = "{MPI Forum}",
+  title     = "{MPI}: {A} Message-Passing Interface Standard Version 3.1",
+  institution = "University of Tennessee, Knoxville",
+  month     = "June",
+  year      = "2015",
+}
+
+@techreport{ upc-13-spec,
+    title = {{UPC} Language and Library Specifications, v1.3},
+    author = {{UPC Consortium}},
+    institution = {Lawrence Berkeley National Lab},
+    number = {LBNL-6623E},
+    month = nov,
+    year = 2013
+}
+
+@article{ ga,
+    author = {Nieplocha, Jarek and Palmer, Bruce and Tipparaju, Vinod and Krishnan, Manojkumar and Trease, Harold and Apra, Edoardo}, 
+    title = {Advances, Applications and Performance of the Global Arrays Shared Memory Programming Toolkit},
+    volume = {20}, 
+    number = {2}, 
+    pages = {203-231}, 
+    year = {2006}, 
+    journal = {International Journal of High Performance Computing Applications} 
+}
+
+@ARTICLE{brightwell:micro:06, 
+    author={R. Brightwell and K. T. Pedretti and K. D. Underwood and T. Hudson}, 
+    journal={IEEE Micro}, 
+    title={{SeaStar} Interconnect: {Balanced} Bandwidth for Scalable Performance}, 
+    year={2006}, 
+    volume={26}, 
+    number={3}, 
+    pages={41-57}, 
+    doi={10.1109/MM.2006.65}, 
+    ISSN={0272-1732}, 
+    month={May},
+}
+
+@article{reid:08,
+    author = {Reid, John},
+    title = {The New Features of {Fortran} 2008},
+    journal = {SIGPLAN Fortran Forum},
+    issue_date = {August 2008},
+    volume = {27},
+    number = {2},
+    month = aug,
+    year = {2008},
+    issn = {1061-7264},
+    pages = {8--21},
+    numpages = {14},
+    doi = {10.1145/1408643.1408645},
+    acmid = {1408645},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+} 
+
+@article{bal:92,
+   author    = {H. E. Bal and M. F. Kaashoek and A. S. Tanenbaum},
+   title     = {{Orca: A Language For Parallel Programming of Distributed Systems}},
+   journal   = {IEEE Trans. on Software Eng.},
+   year      = {1992},
+   month     = {Mar},
+   volume    = {18},
+   number    = {3},
+   pages     = {190--205},
+   xx        = {yes}
+}
+
+@article{ahuja:86,
+   author    = {S. Ahuja and N. Carriero and D. Gelernter},
+   title     = {{Linda and Friends}},
+   journal   = {IEEE Computer},
+   year      = 1986,
+   month     = aug ,
+   volume    = 19,
+   number    = 8,
+   pages     = {26--34},
+   xx        = {yes}
+}
+
+@INPROCEEDINGS{larkins:08, 
+    author={D. B. Larkins and J. Dinan and S. Krishnamoorthy and S. Parthasarathy and A. Rountev and P. Sadayappan}, 
+    booktitle={Proc. Intl. Conf. for High Performance Computing, Networking, Storage and Analysis},
+    series={SC '08},
+    title={Global Trees: A framework for linked data structures on distributed memory parallel systems}, 
+    year={2008}, 
+    pages={1-13}, 
+    doi={10.1109/SC.2008.5218880}, 
+    ISSN={2167-4329}, 
+    month={Nov}
+}
+
+@inproceedings{larkins:12,
+    author = {"Larkins, D. Brian"},
+    title = {"Improving Data Locality for Irregular Partitioned Global Address Space Parallel Programs"},
+    booktitle = {"Proc. 50th Annual Southeast Regional Conference"},
+    series = {"ACM-SE '12"},
+    year = {"2012"},
+    isbn = {"978-1-4503-1203-5"},
+    location = {"Tuscaloosa, Alabama"},
+    pages = {"280--285"},
+    doi = {"10.1145/2184512.2184577"},
+    acmid = {"2184577"},
+    publisher = {"ACM"},
+    address = {"New York, NY, USA"},
+}
+
+@INPROCEEDINGS{namashivayam:15, 
+    author={N. Namashivayam and D. Eachempati and D. Khaldi and B. Chapman}, 
+    booktitle={Proc. IEEE Intl. Conf. on Cluster Computing}, 
+    title={{OpenSHMEM} as a Portable Communication Layer for {PGAS} Models: {A} Case Study with {Coarray Fortran}}, 
+    year={2015}, 
+    pages={438-447}, 
+    doi={10.1109/CLUSTER.2015.66}, 
+    ISSN={1552-5244}, 
+    month={Sept},
+}
+
+@inproceedings{maynard:12,
+    author = {Chris Maynard},
+    title  = {Comparing One-Sided Communication With {MPI}, {UPC} and {SHMEM}},
+    booktitle = {Proc. Cray Users Group},
+    series = {CUG '12},
+    year   = {2012}
+}
+
+@misc{ocr,
+    author= {{OCR Working Group}},
+    title = {The Open Community Runtime Interface, Version 1.1.0},
+    month = {March},
+    year  = {2016},
+    editor = {Tim Mattson and Romain Cledat}
+}
+
+@inproceedings{kale:93,
+    author = {Laxmikant V. Kale and Sanjeev Krishnan},
+    title = {{CHARM++}: {A} Portable Concurrent Object Oriented System Based On {C++}},
+    booktitle = {Proc. Conf. on Object Oriented Programming Systems, Languages, and Applications},
+    year = {1993},
+    pages = {91--108},
+    series = {OOPSLA '93}
+}
+
+@INPROCEEDINGS{wilke:14, 
+    author={J. J. Wilke}, 
+    booktitle={Proc. IEEE Intl. Parallel Distributed Processing Symposium Workshops},
+    series={IPDPSW '14},
+    title={Coordination Languages and {MPI} Perturbation Theory: {The} {FOX} Tuple Space Framework for Resilience}, 
+    year={2014}, 
+    pages={1208-1217}, 
+    doi={10.1109/IPDPSW.2014.136}, 
+    month={May},}
+
+@inproceedings{power:10,
+    author = {Power, Russell and Li, Jinyang},
+    title = {Piccolo: Building Fast, Distributed Programs with Partitioned Tables},
+    booktitle = {Proc. 9th USENIX Conference on Operating Systems Design and Implementation},
+    series = {OSDI'10},
+    year = {2010},
+    location = {Vancouver, BC, Canada},
+    pages = {293--306},
+    numpages = {14},
+    acmid = {1924964},
+    publisher = {USENIX Association},
+    address = {Berkeley, CA, USA},
+} 
+
+@inproceedings{schneider:13,
+    author={T. Schneider and T. Hoefler and R. Grant and B. Barrett and R. Brightwell},
+    title={{Protocols for Fully Offloaded Collective Operations on Accelerated Network Adapters}},
+    year={2013},
+    month={Oct.},
+    pages={593-602},
+    booktitle={Parallel Processing (ICPP), 2013 42nd International Conference on},
+    location={Lyon, France},
+    issn={0190-3918},
+    source={http://www.unixer.de/~htor/publications/},
+}
+
+@inproceedings{flajslik:16,
+    author    = {Mario Flajslik and James Dinan and Keith D. Underwood},
+    title     = {Mitigating {MPI} Message Matching Misery},
+    booktitle = {Proc. 31st Intl. Conf. High Performance Computing},
+    series    = {ISC '16},
+    pages     = {281--299},
+    year      = {2016},
+    doi       = {10.1007/978-3-319-41321-1_15},
+    timestamp = {Wed, 15 Jun 2016 16:13:02 +0200},
+    biburl    = {http://dblp.uni-trier.de/rec/bib/conf/supercomputer/FlajslikDU16},
+    bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@Article{docan:12,
+    author= {"Docan, Ciprian and Parashar, Manish and Klasky, Scott"},
+    title={"DataSpaces: an interaction and coordination framework for coupled simulation workflows"},
+    journal={"Cluster Computing"},
+    year={"2012"},
+    volume={"15"},
+    number={"2"},
+    pages={"163--181"},
+    issn={"1573-7543"},
+    doi={"10.1007/s10586-011-0162-y"},
+}
+
+@inproceedings{mitchell:13,
+    author = {Christopher Mitchell and Yifeng Geng and Jinyang Li},
+    title = {Using One-Sided {RDMA} Reads to Build a Fast, {CPU}-Efficient Key-Value Store},
+    booktitle = {Presented as part of the 2013 USENIX Annual Technical Conference (USENIX ATC 13)},
+    year = {2013},
+    isbn = {978-1-931971-01-0},
+    address = {San Jose, CA},
+    pages = {103--114},
+    publisher = {USENIX},
+}
+
+@inproceedings{kalia:14,
+    author = {Kalia, Anuj and Kaminsky, Michael and Andersen, David G.},
+    title = {Using {RDMA} Efficiently for Key-value Services},
+    booktitle = {Proceedings of the 2014 ACM Conference on SIGCOMM},
+    series = {SIGCOMM '14},
+    year = {2014},
+    isbn = {978-1-4503-2836-4},
+    location = {Chicago, Illinois, USA},
+    pages = {295--306},
+    numpages = {12},
+    doi = {10.1145/2619239.2626299},
+    acmid = {2626299},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {RDMA, ROCE, infiniband, key-value stores},
+} 
+
